# zkevm-circuits

./: Cargo.toml  Makefile  analyze.py  bench_distributed_prover.sh
benchmark/: out_leader.txt  out_worker_0.txt  out_worker_1.txt
bus-mapping/: Cargo.toml
circuit-benchmarks/: Cargo.toml
circuit-benchmarks/src/: evm_circuit.rs  lib.rs  packed_multi_keccak.rs
circuit-helper/: Cargo.toml
circuit-helper/artifacts/: .gitignore
circuit-helper/artifacts/evm/: workload_config.json
circuit-helper/artifacts/keccak/: network_config.json  workload_config.json
circuit-helper/src/: artifacts.rs  lib.rs
circuit-helper/src/circuits/: common.rs  evm.rs  keccak.rs  mod.rs
distributed-prover/: Cargo.toml  README.md  prove-local.out  prove-local.txt  prove_0.out  prove_1.out  prover0.txt  prover1.txt  run.sh
distributed-prover/artifacts/: .gitignore
distributed-prover/artifacts/keccak/: network_config.json
distributed-prover/src/: main.rs
distributed-prover/src/circuits/: evm.rs  keccak.rs  mod.rs
distributed-prover/src/util/: artifacts.rs  constants.rs  mod.rs
eth-types/: Cargo.toml
gadgets/: Cargo.toml
integration-tests/: Cargo.toml
light-client-poc/: Cargo.toml
testool/: Cargo.toml
zkevm-circuits/: Cargo.toml
zkevm-circuits/src/root_circuit/: aggregation.rs
zkevm-circuits/src/util/: cell_placement_strategy.rs
