[package]
name = "distributed-prover"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circuit-helper = { path = "../circuit-helper"  }
env_logger = "0.9"

[features]
gpu = ["circuit-helper/gpu"]
